# streamlit-me

./: app.py  pyproject.toml  styles.css
.streamlit/: config.toml
page/: autobiography.py  portfolio.py
