[tool.poetry]
name = "aviso-streamlit"
version = "0.1.0"
description = ""
authors = ["Momoyaan <ianmathewaviso@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
